_archive/ingress and network policy/11-svc-app-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  namespace: demo-ing
spec:
  type: ClusterIP
  selector:
    app: demo
    version: v1
  ports:
    - name: http
      port: 80
      targetPort: 5678
