_archive/ingress and network policy/21-svc-app-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v2
  namespace: demo-ing
spec:
  type: ClusterIP
  selector:
    app: demo
    version: v2
  ports:
    - name: http
      port: 80
      targetPort: 5678
