_archive/ingress and network policy/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: example.local
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: app-v2
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v1
                port:
                  name: http
    - host: v2.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-v2
                port:
                  name: http
