_archive/ingress and network policy/40-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: demo-ing
spec:
  podSelector: {}
  policyTypes:
    - Ingress
