_archive/ingress and network policy/41-allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-controller
  namespace: demo-ing
spec:
  podSelector:
    matchLabels:
      app: demo
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
        podSelector:
          matchLabels:
            app.kubernetes.io/component: controller
            app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 5678
